* fixing iOS display bugs - concept list height; images not being clipped by   frame
git-svn-id: https://gtsvn.uit.no/langtech/trunk/apps/aajege@83517 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/sma-client/app/views/games/styles/leksa.styl
+++ b/src/sma-client/app/views/games/styles/leksa.styl
@@ -66,6 +66,7 @@
             margin: 0 auto
             width: 300px
             height: 300px
+            background-size: 300px 300px
 
         .word_concept
             height: 1.5em
@@ -119,6 +120,7 @@
             img
                 width: 100%
                 height: 100%
+                background-size: 100% 100%
 
         a.answerlink
             width: 300px
@@ -171,6 +173,7 @@
                 border-radius: 20px
                 width: 100%
                 height: 100%
+                background-size: 100% 100%
 
         .img_concept.no_frame
             border: none
@@ -316,6 +319,7 @@
                 img
                     width: w
                     height: w
+                    background-size: w w
 
         @media only screen and (max-width: 420px)
             w = 200px
@@ -327,6 +331,7 @@
                 img
                     width: w
                     height: w
+                    background-size: w w
 
     @media only screen and (max-width: 390px)
         box_size = 260px
@@ -362,6 +367,7 @@
         .image-item, .img_concept
             width: img_size
             height: img_size
+            background-size: @width @width
 
     @media only screen and (min-width: 400px)
 
@@ -377,6 +383,7 @@
         .image-item, .img_concept
             width: 190px !important
             height: @width
+            background-size: @width @width
 
     @media only screen and (min-width: 500px)
 
@@ -392,6 +399,7 @@
         .image-item, .img_concept
             width: 240px !important
             height: @width
+            background-size: @width @width
 
     // iPad: 768 x 927
     @media only screen and (min-width: 766px)
